# wrx-digital-instrument-cluster-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  run_virtual.sh  rust-toolchain.toml
.zed/: settings.json
resources/database/: CSS-Electronics-OBD2-v1.4.dbc  WRX_2018.dbc  cobb.json  subaru_wrx_2018_can_db.json
resources/database/can/: WRX_2018.dbc
resources/database/dbc/: WRX_2018.dbc
resources/fonts/Montserrat/: README.md
resources/lang/: dev.lang  en_US.lang
scripts/: apalis_imx8_ssh_config  build_apalis_imx8.sh  deploy_apalis_imx8.sh  generate_bitbake.sh  run_virtual.sh  vcan_run.py
src/: can_data_bridge.rs  car_data.rs  cardata.rs  main.rs  unit_conversion.rs
src/application/: can_data_bridge.rs  config.rs  hardware_bridge.rs  mod.rs  s_car_data_bridge.rs  serdes.rs  settings.rs  ui_data_bridge.rs  user.rs
src/can/: can_backend.rs  can_controller.rs  can_data_emulator.rs  can_mux_manager.rs  can_mux_parser.rs  device_manager.rs  messages.rs  mod.rs  mux_context.rs  special_message_handler.rs  util.rs  virtual_can_generator.rs
src/can/messages/: mod.rs  wrx_2018.rs
src/can/messages/emulators/: mod.rs  wrx_2018_emulator.rs
src/can/parsers/: iso_tp.rs  mod.rs  obd2.rs  uds.rs
src/data/: car_data.rs  data_parameter.rs  mod.rs  obd_data.rs  parameters.rs  units.rs
src/hardware/: apalis_imx8.rs  hardware_backend.rs  mod.rs
src/slint-ui/: main.slint
src/slint-ui/application/: application_state.slint
src/slint-ui/components/: can_display.slint  controlled_focus_scope.slint  core.slint  debug.slint  debug_menu.slint  focus_elements.slint  instrument_gauge.slint  navmap.slint  road_indicators.slint  settings.slint  widget_container.slint
src/slint-ui/data/: application_state.slint  car_data.slint  data_parameter.slint
src/slint-ui/themes/: main_symbol_properties.slint  theme_loader_gen.slint  themes.slint
src/slint-ui/themes/debug/: theme_main.slint
src/slint-ui/themes/default/: theme_main.slint
src/slint-ui/themes/default-navmap/: theme_main.slint
src/slint-ui/themes/default/components/: instrument_gauge.slint  road_indicators.slint
src/slint-ui/themes/track/: theme_main.slint
src/slint-ui/themes/track/components/: generic-gauge.slint  tachometer.slint
src/slint_ui/: main.slint
src/slint_ui/backend/: backend_lib.rs  can_display.rs  car_data_bridge.rs  config_bridge.rs  core_components.rs  entry.rs  hardware_bridge.rs  lang.rs  mod.rs  rs_type_resolver.rs  settings_bridge.rs  user_settings_bridge.rs  widget_container.rs
src/slint_ui/backend/bevy_adapter/: mod.rs  slint_bevy_adapter.rs
src/slint_ui/components/: can_display.slint  core.slint  debug.slint  settings.slint  widget_container.slint
src/slint_ui/data/: application_state.slint  car_data.slint  data_parameter.slint
src/slint_ui/lib/: core.slint  rs.slint  state.slint  units.slint
src/slint_ui/themes/: theme_loader_gen.slint  themes.slint
src/slint_ui/themes/components/: required_components.slint
src/slint_ui/themes/debug/: debug_main.slint  theme_main.slint
src/slint_ui/themes/default/: default_main.slint  theme_main.slint
src/slint_ui/themes/default/components/: car_interior_brightness_indicator.slint  instrument_gauge.slint  road_indicators.slint
src/slint_ui/themes/track/: theme_main.slint  track_main.slint
src/slint_ui/themes/track/components/: generic-gauge.slint  tachometer.slint
src/slint_ui/widgets/: bevy_car_display.slint  bevy_texture_widget.slint  can_display.slint  car_display.slint  debug.slint  settings.slint  widget_container.slint
src/ui/: can_display.rs  car_data_bridge.rs  hardware_bridge.rs  main.slint  mod.rs  model_container.rs  navmap.rs  theme_handler.rs  three_d_underlay.rs  user_settings_bridge.rs
src/ui/components/: instrument_gauge.slint  road_indicators.slint
src/ui/data/: car_data.slint  data_parameter.slint  units.slint
src/ui/themes/: main_symbol_properties.slint
ui/: appwindow.slint  main.slint
ui/components/: instrument_gauge.slint
ui/core/: car_data.slint
ui/themes/modern/: modern.slint
ui/themes/modern/components/: instrument_gauge.slint
