[package]
    name         = "wrx-digital-instrument-cluster-rs"
    description  = "A digital instrument cluster for the 2018 Subaru WRX"
    repository   = "https://github.com/Hentai-Racing/wrx-digital-instrument-cluster-rs"
    version      = "0.21.0"                                                             # Only 1.0.0 when all factory features exist
    authors      = ["Bryce Happel Walton <brycewaltonmail@gmail.com>"]
    edition      = "2024"
    build        = "build.rs"
    license-file = "LICENSE"
    readme       = "README.md"

[features]
    default     = ["wayland", "slcan"]
    wayland     = ["slint/backend-winit-wayland", "slint/renderer-skia-opengl"]
    apalis_imx8 = ["dep:gpio-cdev", "dep:industrial-io"]
    slcan       = ["dep:slcan", "dep:serial"]

[dependencies]
    slint        = { git = "https://github.com/slint-ui/slint.git", rev = "d2efedc", default-features = false, features = ["compat-1-2", "std"] } #! https://github.com/slint-ui/slint/issues/9782 https://github.com/slint-ui/slint/discussions/10291
    async-compat = "*"
    rand         = "*"
    pastey       = "*"
    clap         = "*"
    embedded-can = "*"
    futures      = "*"
    bitvec       = "*"
    serde        = { version = "*", features = ["std", "derive"] }
    serde_bytes  = "*"
    toml         = "*"
    tokio        = { version = "*", features = ["sync", "rt-multi-thread", "macros", "signal", "time"], default-features = false }
    crossbeam    = "*"
    num_enum     = "*"
    sysinfo      = "*"

    # feature deps
    gpio-cdev     = { version = "*", optional = true, features = ["async-tokio"] }
    industrial-io = { version = "*", optional = true }
    serial        = { version = "*", optional = true }
    slcan         = { git = "https://github.com/bryce-happel-walton/slcan.git", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
    socketcan = "*"

[build-dependencies]
    slint-build = { git = "https://github.com/slint-ui/slint.git", rev = "d2efedc" }
    dbc-codegen = { git = "https://github.com/bryce-happel-walton/dbc-codegen.git", branch = "feature/inverted-bit-signals", features = ["std"] } #* https://github.com/technocreatives/dbc-codegen/pull/97
    syn         = "*"
    walkdir     = "*"
    json        = "*"

[profile.dev.package."*"]
    opt-level = 3

[profile.dev]
    opt-level = 0

[profile.apalis_imx8]
    inherits  = "release"
    lto       = "fat"
    opt-level = "s"
    panic     = "abort"
    strip     = true
