[package]
    name         = "wrx-digital-instrument-cluster-rs"
    description  = "A digital instrument cluster for the 2018 Subaru WRX"
    repository   = "https://github.com/Hentai-Racing/wrx-digital-instrument-cluster-rs"
    version      = "0.24.4"                                                             # Only 1.0.0 when ALL factory features exist
    authors      = ["Bryce Happel Walton <brycewaltonmail@gmail.com>"]
    edition      = "2024"
    build        = "build.rs"
    license-file = "LICENSE"
    readme       = "README.md"

[features]
    default             = ["wayland", "slcan"]
    wayland             = ["slint/backend-winit-wayland", "slint/renderer-skia-opengl"]
    apalis_imx8         = ["dep:gpio-cdev", "dep:industrial-io", "fontique_workaround"]
    slcan               = ["dep:slcan", "dep:serial"]
    fontique_workaround = ["slint/renderer-software"]                                   #! TRACKING: https://github.com/slint-ui/slint/discussions/10291

[dependencies]
    slint        = { git = "https://github.com/slint-ui/slint.git", default-features = false, features = ["compat-1-2", "std"] }
    async-compat = "*"
    rand         = "*"
    pastey       = "*"
    clap         = "*"
    embedded-can = "*"
    futures      = "*"
    bitvec       = "*"
    serde        = { version = "*", features = ["std", "derive"] }
    serde_bytes  = "*"
    toml         = "*"
    tokio        = { version = "*", features = ["sync", "rt-multi-thread", "macros", "signal", "time"], default-features = false }
    crossbeam    = "*"
    sysinfo      = "*"
    strum        = { version = "*", features = ["derive"] }
    rust-embed   = { version = "*", default-features = false, features = ["compression", "include-exclude"] }

    # feature deps
    gpio-cdev     = { version = "*", optional = true, features = ["async-tokio"] }
    industrial-io = { version = "*", optional = true }
    serial        = { version = "*", optional = true }
    slcan         = { git = "https://github.com/bryce-happel-walton/slcan.git", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
    socketcan = "*"

[build-dependencies]
    slint-build = { git = "https://github.com/slint-ui/slint.git" }
    dbc-codegen = { git = "https://github.com/bryce-happel-walton/dbc-codegen.git", branch = "feature/inverted-bit-signals", features = ["std"] } #* https://github.com/technocreatives/dbc-codegen/pull/97
    syn         = "*"
    walkdir     = "*"
    json        = "*"

[profile.dev.package."*"]
    opt-level = 3

[profile.dev]
    opt-level = 0

[profile.apalis_imx8]
    inherits  = "release"
    lto       = "fat"
    opt-level = "s"
    panic     = "abort"
    strip     = true
