[package]
    name         = "wrx-digital-instrument-cluster-rs"
    description  = "A digital instrument cluster for the 2018 Subaru WRX"
    repository   = "https://github.com/Hentai-Racing/wrx-digital-instrument-cluster-rs"
    version      = "0.28.0"                                                             # Only 1.0.0 when ALL factory features exist
    authors      = ["Bryce Happel Walton <brycewaltonmail@gmail.com>"]
    edition      = "2024"
    build        = "build.rs"
    readme       = "README.md"
    license-file = "LICENSE"

[features]
    default     = ["wayland", "slcan", "bevy"]
    wayland     = ["slint/backend-winit-wayland", "slint/renderer-skia"]
    apalis_imx8 = ["dep:gpio-cdev", "dep:industrial-io"]
    slcan       = ["dep:slcan", "dep:serial"]
    bevy        = ["dep:bevy", "dep:bevy_image", "dep:spin_on", "slint/unstable-wgpu-27"]

[dependencies]
    slint        = { git = "https://github.com/slint-ui/slint.git", default-features = false, features = ["compat-1-2", "std"] }
    async-compat = "*"
    rand         = "*"
    pastey       = "*"
    clap         = "*"
    embedded-can = "*"
    futures      = "*"
    bitvec       = "*"
    serde        = { version = "*", features = ["std", "derive"] }
    serde_bytes  = "*"
    serde_json   = "*"
    toml         = "*"
    tokio        = { version = "*", features = ["sync", "rt-multi-thread", "macros", "signal", "time"], default-features = false }
    crossbeam    = "*"
    sysinfo      = "*"
    strum        = { version = "*", features = ["derive"] }
    rust-embed   = { version = "*", default-features = false, features = ["compression", "include-exclude"] }

    # feature deps
    gpio-cdev     = { version = "*", optional = true, features = ["async-tokio"] }
    industrial-io = { version = "*", optional = true }
    serial        = { version = "*", optional = true }
    slcan         = { git = "https://github.com/bryce-happel-walton/slcan.git", optional = true }

    # bevy
    bevy       = { version = "*", default-features = false, features = ["bevy_core_pipeline", "bevy_pbr", "bevy_window", "bevy_scene", "bevy_gltf", "bevy_log", "jpeg", "png", "tonemapping_luts", "multi_threaded", "reflect_auto_register", "debug"], optional = true }
    bevy_image = { version = "*", features = ["zstd_rust"], optional = true }
    spin_on    = { version = "*", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
    socketcan = "*"

[build-dependencies]
    slint-build    = { git = "https://github.com/slint-ui/slint.git" }
    dbc-codegen    = { git = "https://github.com/bryce-happel-walton/dbc-codegen.git", branch = "main", features = ["std"] } #* https://github.com/technocreatives/dbc-codegen/pull/97
    syn            = "*"
    walkdir        = "*"
    cargo_metadata = "*"
    serde_json     = "*"
    json5          = "*"

[profile.dev.package."*"]
    opt-level = 3

[profile.dev]
    opt-level = 0

[profile.apalis_imx8]
    inherits  = "release"
    lto       = "fat"
    opt-level = "s"
    panic     = "abort"
    strip     = true
